fix alignment of note list header

--- a/webservice/static/style.css
+++ b/webservice/static/style.css
@@ -154,6 +154,7 @@ form.auth-form>label {
     grid-column: span 4;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    align-items: center;
     padding: 0.5rem;
 }
 
